--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "eslint": "npx eslint --ext .js .",
+    "format": "npx prettier --write .",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +16,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.43.0",
+    "prettier": "^2.8.8"
   }
 }
